--- a/css/index.css
+++ b/css/index.css
@@ -138,7 +138,7 @@ html, body {
     color: rgba(0, 0, 0, 0.49);
     font-size: 20px;
     margin-top: -20px;
-    max-width: 90vw;
+    max-width: 70vw;
 }
 
 .landingpage3 img {
@@ -178,6 +178,15 @@ html, body {
     color: white;
     font-size: 20px;
     font-weight: 500;
+}
+
+button {
+    transition: .2s ease-in-out 0s;
+   }
+
+button:hover {
+    transform: scale(1.05);
+    cursor: pointer;
 }
 
 .download .subtext {
