--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@ html, body {
     padding: 0;
     margin: 0;
     font-family: 'inter', Arial, Helvetica, sans-serif;
+
 }
 
 .header {
@@ -14,7 +15,7 @@ html, body {
     width: 40vw;
     height: 8vh;
     background-color: rgba(33, 36, 44, 0.8);
-    border: solid rgba(255, 255, 255, 0.2) 2px;
+    border: solid rgba(255, 255, 255, 0.2) 4px;
     position: fixed;
     left: 30vw;
     right: 30vw;
@@ -25,6 +26,7 @@ html, body {
     color: white;
     align-items: center;
     z-index: 100;
+    backdrop-filter: blur(5px);
 }
 
 .header img {
